--- a/src/main/resources/l10n/JabRef_en.properties
+++ b/src/main/resources/l10n/JabRef_en.properties
@@ -243,6 +243,8 @@ Delete=Delete
 
 Delete\ entry=Delete entry
 
+abstract\ entry = abstract entry
+
 Delete\ multiple\ entries=Delete multiple entries
 
 Deleted=Deleted
